fix:Remove scrollbar that is always present on datatable (#559)

--- a/public/components/paginate_controls/paginate_controls.less
+++ b/public/components/paginate_controls/paginate_controls.less
@@ -1,6 +1,7 @@
 @import (reference) "../../style/variables";
 
 .canvas__paginate--page-controls {
+  overflow: hidden;
   text-align: center;
 
   .page-navigate,
